--- a/argocd/application-nginx.yaml
+++ b/argocd/application-nginx.yaml
@@ -4,20 +4,20 @@ metadata:
   name: nginx-argo-app
   namespace: argocd
 spec:
-  project: nginx
+  project: default
 
   source:
     repoURL: https://github.com/MPriv32/minikube-k8s-platform-demo.git
     targetRevision: HEAD
     path: apps/nginx
   destination:
-    server: https://kubernetes.default.svc\
+    server: https://kubernetes.default.svc
     namespace: nginx
 
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
-    
+
     # Pulls at 3min intervals
     automated:
       selfHeal: true
