--- a/argocd/application-prometheus.yaml
+++ b/argocd/application-prometheus.yaml
@@ -6,14 +6,18 @@ metadata:
 spec:
   project: default
 
-  source:
-    repoURL: https://github.com/MPriv32/minikube-k8s-platform-demo.git
-    targetRevision: HEAD
-    path: apps/prometheus
-    helm:
-      valueFiles:
-        - values.yaml
-        - values-prod.yaml  # env specific args
+  sources:
+    - repoURL: https://prometheus-community.github.io/helm-charts
+      chart: kube-prometheus-stack
+      targetRevision: 61.3.2
+      helm:
+        valueFiles:
+          - $values/apps/prometheus/values.yaml
+          - $values/apps/prometheus/values-prod.yaml  # env specific args
+
+    - repoURL: https://github.com/MPriv32/minikube-k8s-platform-demo.git
+      targetRevision: HEAD
+      ref: values
 
   destination:
     server: https://kubernetes.default.svc
